--- a/Java/1. Introduction.md
+++ b/Java/1. Introduction.md
@@ -14,7 +14,7 @@
 # First program
 
 ```java
-    
+    com.package_name;
 
     public class File_name {
         public static void main(String[] args) {
