Update 3. Data types.md

--- a/Java/3. Data types.md
+++ b/Java/3. Data types.md
@@ -10,4 +10,14 @@
     - double - 8 bytes
     - char - 2 bytes (stores characters a, b, c, etc.)
     - boolean - 1 byte (stores true or false)
+
+      Example :
+      ``` java
+          byte age = 18;
+          int phone = 0987654321;
+          long phone2 = 000987654321L; // here L denotes that the variable is of long type
+          float pi = 3.14F; // here F denotes that the variable is of float type
+          char letter = 'a';
+          boolean isAdult = true;
+  
   - Non-primitive
