Update 3. Data types.md

--- a/Java/3. Data types.md
+++ b/Java/3. Data types.md
@@ -1,7 +1,7 @@
 # What are data types?
 - different sizes and values that can be stored in the variable
 - two types :
-  - Primitive
+  - Primitive (simple ones)
     - byte - 1 byte (stores numbers from -128 to 127)
     - short - 2 bytes
     - int - 4 bytes (stores numbers 1, 2, 3, etc.)
@@ -20,4 +20,6 @@
           char letter = 'a';
           boolean isAdult = true;
   
-  - Non-primitive
+  - Non-primitive (complex ones)
+
+    These types of variables have their own methods that are called using dot (.)
