--- a/Java/3. Data types.md
+++ b/Java/3. Data types.md
@@ -12,7 +12,7 @@
     - boolean - 1 byte (stores true or false)
 
       Example :
-      ``` java
+      ```java
           byte age = 18;
           int phone = 0987654321;
           long phone2 = 000987654321L; // here L denotes that the variable is of long type
@@ -23,3 +23,6 @@
   - Non-primitive (complex ones)
 
     These types of variables have their own methods that are called using dot (.)
+
+    Example :
+    
