Update 3. Data types.md

--- a/Java/3. Data types.md
+++ b/Java/3. Data types.md
@@ -12,7 +12,7 @@
     - boolean - 1 byte (stores true or false)
 
       Example :
-      ```java
+      ``` java
           byte age = 18;
           int phone = 0987654321;
           long phone2 = 000987654321L; // here L denotes that the variable is of long type
@@ -25,4 +25,7 @@
     These types of variables have their own methods that are called using dot (.)
 
     Example :
+    ``` java
+        String name = "Krishna";
+        System.out.println(name.length); /* This statement gives the length of the string
     
