Update 3. Data types.md

--- a/Java/3. Data types.md
+++ b/Java/3. Data types.md
@@ -27,5 +27,8 @@
     Example :
     ``` java
         String name = "Krishna";
-        System.out.println(name.length); /* This statement gives the length of the string
-    
+        System.out.println(name.length); // .length is a method that gives length of the string
+
+    ``` java
+        String name = new String("Krishna"); /* A string can also be defined using the 'new' keyword
+                                              * The 'new' keyword is used while object is defined */
