--- a/Java/4. Strings.md
+++ b/Java/4. Strings.md
@@ -1,5 +1,5 @@
 # How to concatenate two strings? 
-- Strings can be easily concatenated using a plus (+) sign
+- strings can be easily concatenated using a plus (+) sign
 
   Example : 
   ``` java
