--- a/Java/4. Strings.md
+++ b/Java/4. Strings.md
@@ -1,3 +1,6 @@
+# What are strings? 
+- collection of characters
+
 # How to concatenate two strings? 
 - strings can be easily concatenated using a plus (+) sign
 
