--- a/Java/4. Strings.md
+++ b/Java/4. Strings.md
@@ -1,5 +1,6 @@
 # What are strings? 
 - collection of characters
+- always given in double quotes (" ")
 
 # How to concatenate two strings? 
 - strings can be easily concatenated using a plus (+) sign
