--- a/Java/1. Introduction.md
+++ b/Java/1. Introduction.md
@@ -3,7 +3,7 @@
 
 # What is a package?
 - a library to store all the related files
-- given as : com.package_name
+- given as : com.package_name;
 
 # What is class?
 - set of objects which shares common characteristics and properties
