--- a/Java/5. Arrays.md
+++ b/Java/5. Arrays.md
@@ -2,7 +2,7 @@
 - collection of same set of elements
 - given as : data_type[] array_name = new data_type[array_size];
 - arrays with elements are defined as : data_type[] array_name = {element1, element2, ...};
-- elements of array can be accessed using [] and index of that elemen
+- elements of array can be accessed using [] and index of that element
 
   NOTE : In Java, if a variable is not assigned any value, the by default value given to it is 0 and false for boolean
 
