--- a/Java/1. Introduction.md
+++ b/Java/1. Introduction.md
@@ -24,3 +24,7 @@ public class File_name {
                                     * println gives an extra line space after output where as print does not */
     }
 }
+
+
+OUTPUT :
+Hello
