Update 3. Data types.md

--- a/Java/3. Data types.md
+++ b/Java/3. Data types.md
@@ -29,5 +29,10 @@
     String name = "Krishna";
     System.out.println(name.length); // .length is a method that gives length of the string
 
+
+    OUTPUT :
+    7
+    
+
     String name = new String("Krishna"); /* A string can also be defined using the 'new' keyword
                                           * The 'new' keyword is used while object is defined */
