--- a/Java/4. Strings.md
+++ b/Java/4. Strings.md
@@ -12,6 +12,10 @@
   String name3 = name1 + " and " + name2; // In Java plus sign can also add strings
   System.out.println(name3);
 
+
+  OUTPUT :
+  Krishna and Radha
+
 # charAt function
 - charAt function gives the character at a specific position of the string using index
 
@@ -19,6 +23,10 @@
   ``` java
   String name = "Krishna";
   System.out.println(name.charAt(0)); \\ Character at 0th position will be printed
+
+
+  OUTPUT :
+  K
 
 # replace function
 - replace function replaces a character in a string with another character
@@ -28,6 +36,10 @@
   String name1 = "Siddhi";
   String name2 = name.replace('i', 'a');
   System.out.println(name2);
+
+
+  OUTPUT :
+  Saddha
 
 NOTE : In Java, strings are inmutable i.e if an operation is to be performed on a string, a new string needs to be used to make the changes
 
@@ -39,3 +51,7 @@ NOTE : In Java, strings are inmutable i.e if an operation is to be performed on 
   String name = "Radha and Krishna";
   System.out.println(name.substring(0, 5)); /* 0 is the index of the starting letter
                                             * substring does not include the index of the ending letter so an index after is given */
+
+
+  OUTPUT :
+  Radha
