--- a/Java/5. Arrays.md
+++ b/Java/5. Arrays.md
@@ -34,7 +34,14 @@
         Arrays.sort(marks);
         System.out.println(marks[0]);
       }
-  }  
+  }
+
+
+  OUTPUT :
+  3
+  97
+  95
+  
 
 # 2D arrays
 - arrays that are like matrices
@@ -43,3 +50,7 @@
   ``` java
   int[][] marks = {{97, 98, 95}, {95, 90, 96}};
   System.out.println(marks[1][2]); // by giving the indexes in [] the elements can be accessed in 2D arrays
+
+
+  OUTPUT :
+  90
