--- a/Java/6. Casting.md
+++ b/Java/6. Casting.md
@@ -10,5 +10,24 @@
     Example :
     ``` java
     double price = 100.00;
-    double finalPrice = price + 18;
+    double finalPrice = price + 18; // here an integer is added to a double and there is no loss of data as integer takes less no. of bits compared to double
     System.out.println(finalPrice);
+
+
+    OUTPUT :
+    118.00 -- the output is a double
+
+
+- Explicit casting
+  - like pouring a bucket of water in the glass
+
+    Example :
+    ``` java
+    double price = 100;
+    int finalPrice = price + (int)18.00; /* here without (int) error would occur and it tells the compiler to take the double as an integer
+                                          * (int) does not round off the double, instead it truncates the decimals */
+    System.out.println(finalPrice);
+
+
+    OUTPUT :
+    118 -- the output is an integer
