--- a/Java/7. Constants.md
+++ b/Java/7. Constants.md
@@ -1,8 +1,9 @@
 # What are constants?
 - values that do not change
 - a 'final' keyword is defined while declaring constants
+- when a constant is declared, no one can change it later in the code
 - mostly given in uppercase
 
   Example :
   ``` java
-  final float PI = 3.14F
+  final float PI = 3.14F;
