--- a/Java/6. Casting.md
+++ b/Java/6. Casting.md
@@ -4,30 +4,29 @@
   Example : If a glass of water is poured in a bucket, the bucket can hold the water but if the reverse is done then the glass
   cannot hold the water and there will be loss of water
 
-- Implicit casting
-  - like pouring a glass of water in the bucket
- 
-    Example :
-    ``` java
-    double price = 100.00;
-    double finalPrice = price + 18; // here an integer is added to a double and there is no loss of data as integer takes less no. of bits compared to double
-    System.out.println(finalPrice);
+- 2 types 
+  - Implicit casting - like pouring a glass of water in the bucket
+   
+      Example :
+      ``` java
+      double price = 100.00;
+      double finalPrice = price + 18; // here an integer is added to a double and there is no loss of data as integer takes less no. of bits compared to double
+      System.out.println(finalPrice);
+  
+  
+      OUTPUT :
+      118.00 -- the output is a double
 
 
-    OUTPUT :
-    118.00 -- the output is a double
-
-
-- Explicit casting
-  - like pouring a bucket of water in the glass
-
-    Example :
-    ``` java
-    double price = 100;
-    int finalPrice = price + (int)18.00; /* here without (int) error would occur and it tells the compiler to take the double as an integer
-                                          * (int) does not round off the double, instead it truncates the decimals */
-    System.out.println(finalPrice);
-
-
-    OUTPUT :
-    118 -- the output is an integer
+  - Explicit casting - like pouring a bucket of water in the glass
+  
+      Example :
+      ``` java
+      double price = 100;
+      int finalPrice = price + (int)18.00; /* here without (int) error would occur and it tells the compiler to take the double as an integer
+                                            * (int) does not round off the double, instead it truncates the decimals */
+      System.out.println(finalPrice);
+  
+  
+      OUTPUT :
+      118 -- the output is an integer
