--- a/Java/8. Operators.md
+++ b/Java/8. Operators.md
@@ -1,4 +1,84 @@
 # What are operators?
 - certain symbols that help perform various operations
-- 4 types
-  - 
+- 3 types
+  - Arithmatic operators - add (+), sub (-), mul (*), div (/), rem (%)
+
+    Example :
+    ``` java
+    int a = 1;
+    int b = 2;
+    int sum = a + b;
+    int diff = a - b;
+    int mul = a * b;
+    int div = a / b;
+    int mod = a % b;
+    System.out.println(sum);
+    System.out.println(diff);
+    System.out.println(mul);
+    System.out.println(div);
+    System.out.println(mod);
+
+
+    OUTPUT :
+    3
+    -1
+    2
+    0
+    1.0
+
+  - Assignment operator - equals (=)
+  - Unary operators
+    - pre increment (++a)
+ 
+      Example :
+      ``` java
+      int a = 1;
+      System.out.println(++a);
+      System.out.println(a);
+
+
+      OUTPUT :
+      2
+      2
+
+      
+    - post increment (a++)
+       
+      Example :
+      ``` java
+      int a = 1;
+      System.out.println(a++);
+      System.out.println(a);
+
+
+      OUTPUT :
+      1
+      2
+
+      
+    - pre decrement (--a)
+       
+      Example :
+      ``` java
+      int a = 1;
+      System.out.println(--a);
+      System.out.println(a);
+
+
+      OUTPUT :
+      0
+      0
+
+      
+    - post decrement (a--)
+       
+      Example :
+      ``` java
+      int a = 1;
+      System.out.println(a--);
+      System.out.println(a);
+
+
+      OUTPUT :
+      1
+      0
