Update 10. Taking input.md

--- a/Java/10. Taking input.md
+++ b/Java/10. Taking input.md
@@ -1,4 +1,4 @@
-# How to take input in Java
+# How to take input in Java?
 - input is taken from user using Scanner function which is an in-built function in Java
 - Scanner class is first imported and then an object is created
 - input is taken with the help of the object
