--- a/Java/13. Logical operators.md
+++ b/Java/13. Logical operators.md
@@ -17,3 +17,39 @@
 
       OUTPUT :
       Both the numbers are greater than 50 // both a and b are greater than 50
+
+
+  - logical OR (||)
+    - if one of the conditions is true then the further code will be executed
+
+      Example :
+      ```java
+      int a = 40;
+      int b = 60;
+      if(a > 50 && b > 50) {
+        System.out.println("Atleast one number is greater than 50"); // this statement will only be printed if any one of the conditions is true
+      }
+
+
+      OUTPUT :
+      Atleast one number is greater than 50 // both a is greater than 50
+
+
+  - logical NOT (!)
+    - if a condition is true then it becomes false and if a condition is false then it becomes true
+
+      Example :
+      ```java
+      boolean isAdult = false;
+      if(!isAdult) {
+        System.out.println("adult");
+      }
+      else {
+        System.out.println("not adult");
+      }
+
+
+      OUTPUT :
+      adult
+
+    NOTE : Even if any == operators are not used in the if condition and only the variable is passed still the compiler considers it as == true
