Update 14. Switch case.md

--- a/Java/14. Switch case.md
+++ b/Java/14. Switch case.md
@@ -7,10 +7,10 @@
   switch(day) {
     case 1 :
         System.out.println("monday"); // will be executed if value of day is 1
-        break;
+        break; // exits from the case 
       case 2 :
         System.out.println("monday"); // will be executed if value of day is 2
-        break;
+        break; // if not written, the code of next case also gets executed
       default :
         System.out.println("wed - sun"); // will be executed if value of day is none of the given cases
   }
