Update 17. Exception Handling.md

--- a/Java/17. Exception Handling.md
+++ b/Java/17. Exception Handling.md
@@ -1,3 +1,18 @@
 # What are exceptions?
 - are like errors but does not stop the whole program execution
-- 
+
+  Example :
+  ```java
+  int[] marks = {97, 98, 95};
+  try {
+      System.out.println(marks[5]);
+  }
+  catch {
+      // some code that is to be executed after catching exception
+  }
+  System.out.println("This is Krishna");
+
+
+  OUTPUT :
+  This is Krishna // if try and catch were not there in the code, then this line wouldn't have been executed
+                  // the program would have given an exception 
