Update 13. Logical operators.md

--- a/Java/13. Logical operators.md
+++ b/Java/13. Logical operators.md
@@ -1,6 +1,6 @@
 # Logical operators
 - used to analyze multiple statements
-- types :
+- 3 types :
 
   - logical AND (&&)
     - if both the conditions are true then only the further code will be executed
