--- a/Java/15. Loops.md
+++ b/Java/15. Loops.md
@@ -48,7 +48,7 @@
       do {
           System.out.println(i);
           i--;
-      } while(i >= 100); // here semicolon(;) is used to tell the compiler that the code gets terminated here
+      } while(i <= 100); // here semicolon(;) is used to tell the compiler that the code gets terminated here
 
 
       OUTPUT :
