--- a/Java/16. Break & continue.md
+++ b/Java/16. Break & continue.md
@@ -10,7 +10,7 @@
   while(true) { // true states that this loop will go on till infinity
       if(i == 3) {
           i++;
-          continue; // stops the after conde execution and again checks the condition
+          continue; // stops the after code execution and again checks the condition
       }  
       System.out.println(i);
       i++;
